--- a/style.css
+++ b/style.css
@@ -141,32 +141,33 @@ img {
    text-align: left;
 }
 
-.album-art {
-   width: 100%;
-   max-width: 200px;
-   height: auto;
-   border-radius: 8px;
-}
-
-/* Saved Tracks Styles */
-#saved-tracks {
-   margin-top: 60px; /* Adjusted margin to make room for the navbar */
-   display: grid;
-   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-   gap: 20px;
-}
-
 .saved-tracks-list {
    list-style: none;
    padding: 0;
 }
 
+#saved-tracks {
+   margin-top: 60px; /* Adjusted margin to make room for the navbar */
+   display: grid;
+   grid-template-columns: repeat(auto-fill, minmax(5, 1fr)); /* Adjusted column width */
+   gap: 20px;
+}
+
 .saved-track-item {
    display: flex;
+   flex-direction: column; /* Changed flex direction to column */
    align-items: center;
    margin-bottom: 20px;
 }
 
+.album-art {
+   width: 100%;
+   max-width: 150px; /* Adjusted max-width for consistency */
+   height: auto;
+   border-radius: 8px;
+   margin-bottom: 10px; /* Added margin for better spacing */
+}
+
 .saved-track-details {
-   flex: 1;
+   text-align: center; /* Centered text for better alignment */
 }
